--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.1",
+    "react-notification": "^6.4.0",
+    "react-notification-system": "^0.2.10",
     "react-router": "^2.8.1"
   },
   "peerDependencies": {
