--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.4.0",
     "react-dropzone": "^3.7.3",
+    "react-file-download": "^0.3.2",
     "react-file-upload": "0.0.4",
     "react-notification-system": "^0.2.10",
     "react-router": "^2.8.1"
